[package]
name = "gusteau"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }

anyhow = "1.0"
serde-transcode = "1.1"
serde-xml-rs = "0.5"
xml-rs = "0.8"
glob = "0.3"
xmltojson = "0.1.1"
json-patch = "0.2"
merge = "*"

jsonschema_code_generator = "2.0.0"
serde_with = { version = "1.10.0", features = ["macros", "json"] }

#json_schema = "1.6.19"
#jsonschema_code_generator

schemafy = { version = "0.6.0" }

schema_analysis = { version = "0.3.4", features = [
    #"json_typegen", 
    "schemars_integration",
] }
json_typegen = "0.6.0"
json_typegen_shared = "0.6.0"

quick-xml = { version = "0.22", features = ["serialize"] }
serde-value = "*"
encoding_rs_io = "*"
#valico
#schema
# derive_builder
